	* Released version 0.9.5
	  ----------------------

2007-11-13  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Support for buckets stored in Europe, access now 
	  goes via <bucket>.s3.amazonaws.com where possible.

2007-11-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for storing file attributes (like ownership, 
	  mode, etc) in sync operation.
	* s3cmd, S3/S3.py: New command 'ib' to get information about 
	  bucket (only 'LocationConstraint' supported for now).

2007-10-01  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Fix typo in argument name (patch
	  from Kim-Minh KAPLAN, SF #1804808)

2007-09-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Exit with error code on error (patch
	  from Kim-Minh KAPLAN, SF #1800583)

2007-09-25  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Don't fail if bucket listing doesn't have
	  <IsTruncated> node.
	* s3cmd: Create ~/.s3cfg with 0600 permissions.

2007-09-13  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Improved 'sync'
	* S3/S3.py: Support for buckets with over 1000 objects.

2007-09-03  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Small tweaks to --configure workflow.

2007-09-02  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Initial support for 'sync' operation. For
	  now only local->s3 direction. In this version doesn't
	  work well with non-ASCII filenames and doesn't support
	  encryption.

2007-08-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Util.py: More ElementTree imports cleanup

2007-08-19  Michal Ludvig  <michal@logix.cz>

	* NEWS: Added news for 0.9.5

2007-08-19  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Better handling of multiple arguments for put, get and del

2007-08-14  Michal Ludvig  <michal@logix.cz>

	* setup.py, S3/Utils.py: Try import xml.etree.ElementTree
	  or elementtree.ElementTree module.

2007-08-14  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Add info about --encrypt parameter.

2007-08-14  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bump up version to 0.9.5-pre
